# tsg-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_tsgraph.py
tsgraph/: __init__.py  tsgraph.pyi
