[package]
name = "tsg-py"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsgraph"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "anyhow"] }
pyo3-stub-gen = { version = "0.7" }
anyhow = "1.0"
tsg = { git = "https://github.com/TSGECO/tsg" }

[build-dependencies]
pyo3-build-config = "0.24"

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
